[package]
name = "substreams-eth-token"
version = "0.1.0"
description = "Substreams for Ethereum tokens"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = { version = "0.11.0" }
prost-types = "0.11.1"
hex = "0.4.3"
substreams = "0.0.20"
substreams-ethereum = "0.2.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
